Web buttons replacement and background color-code changed

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
 		<link rel="stylesheet" href="css/04.style.css?ver=1.8" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/swiper.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/dark.css" type="text/css" />
+		<link rel="stylesheet" href="css/dark.css?ver=1.1" type="text/css" />
 		<link rel="stylesheet" href="css/animate.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css?ver=1.8" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?ver=1.9" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<!-- Document Title
 	============================================= -->
@@ -129,16 +129,16 @@
 										</h3>
 								</div>
 								<div class="whitepaper bottommargin-sm bottommargin-child">
-									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank"><img src="images/_newsite/web_img/TelegramButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="TelegramButton" ></a>
-									<a href="https://discord.gg/2nFmMqA" target="_blank"><img src="images/_newsite/web_img/DiscordButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="DiscordButton" ></a>
+									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank"><img src="images/_newsite/web_img/img-TelegramButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-TelegramButton" ></a>
+									<a href="https://discord.gg/2nFmMqA" target="_blank"><img src="images/_newsite/web_img/img-DiscordButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-DiscordButton" ></a>
 								</div>
 
 							</div>
 						</div>
 						<div class="row clearfix">
 							<div class="col-lg-12 text-center bottom-section" style="">
-								<a href="docs/FLASHWhitepaper.pdf?new" target="_blank" class="display-centrally WhitePaperButton"><img src="images/_newsite/web_img/WhitePaperButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WhitePaperButton" style="width:150px"></a>
-								<a class="LearnMoreButton" href="#" data-scrollto="#about"><img src="images/_newsite/web_img/LearnMoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="LearnMoreButton" ></a>
+								<a href="docs/FLASHWhitepaper.pdf?new" target="_blank" class="display-centrally WhitePaperButton"><img src="images/_newsite/web_img/img-WhitePaperButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-WhitePaperButton" style="width:150px"></a>
+								<a class="LearnMoreButton" href="#" data-scrollto="#about"><img src="images/_newsite/web_img/img-LearnMoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-LearnMoreButton" ></a>
 							</div>
 						</div>
 					</div>
@@ -304,7 +304,7 @@
 								</div>
 								<div class="col-md-12">
 									<div class="promo promo-center">
-										<a href="our-team.html"><img src="images/_newsite/web_img/MoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="MoreButton" style="width:13%;"></a>
+										<a href="our-team.html"><img src="images/_newsite/web_img/img-MoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-MoreButton" style="width:13%;"></a>
 									</div>
 								</div>
 							</div>
@@ -652,7 +652,7 @@
 								</ul>
 								<div class="col-md-12">
 									<div class="promo promo-center">
-										<a href="our-partners.html"><img src="images/_newsite/web_img/MoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="MoreButton" style="width:11%;"></a>
+										<a href="our-partners.html"><img src="images/_newsite/web_img/img-MoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-MoreButton" style="width:11%;"></a>
 									</div>
 								</div>
 							</div>
@@ -696,7 +696,7 @@
 									<span>With the web wallet, you can use an email address or your public address for sending and receiving coins.<br /><br />
 										The web wallet supports most browsers and mobile devices. There's nothing to download or install for maximum convenience.<br/>
 									</span>
-									<a href="https://wallet.flashcoin.io/" target="_blank"><img src="images/_newsite/web_img/WebWalletButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="WebWalletButton" style="width:70%; margin-top:20px;"></a>
+									<a href="https://wallet.flashcoin.io/" target="_blank"><img src="images/_newsite/web_img/img-WebWalletButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-WebWalletButton" style="width:70%; margin-top:20px;"></a>
 									<div class="fancy-title title-border">
 										<h2>Flash <span>Android</span> Wallet</h2>
 									</div>
@@ -760,7 +760,7 @@
 										<div class="fancy-title title-border">
 											<h2>Flash <span>Paper</span> Wallet</h2>
 										</div>
-										<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button topmargin-sm app-store-btn"><img src="images/_newsite/web_img/PaperWalletButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="PaperWalletButton" style="width:80%;"></a>
+										<a href="https://paperwallet.flashcoin.io/" target="_blank" class="button topmargin-sm app-store-btn"><img src="images/_newsite/web_img/img-PaperWalletButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-PaperWalletButton" style="width:80%;"></a>
 									</div>
 								</div>
 							</div>
@@ -788,14 +788,14 @@
 								<h2>Download Whitepaper</h2>
 							</div>
 							<div class="center">
-								<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/_newsite/web_img/EnglishButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="EnglishButton" style="width:15%; margin-right:10px;"></a>
-								<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/web_img/EspanolButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="EspanolButton" style="width:15%; margin-left:10px;"></a>
+								<a href="docs/FLASHWhitepaper.pdf" target="_blank"><img src="images/_newsite/web_img/img-EnglishButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-EnglishButton" style="width:15%; margin-right:10px;"></a>
+								<a href="docs/FLASHWhitepaper-Espanol.pdf" target="_blank"><img src="images/_newsite/web_img/img-EspanolButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-EspanolButton" style="width:15%; margin-left:10px;"></a>
 							</div>
 							<div class="heading-block title-center nobottomborder topmargin-lg">
 								<h2>Github</h2>
 							</div>
 							<div class="center">
-								<a href="https://github.com/flash-coin" target="_blank"><img src="images/_newsite/web_img/gitFLASHCOINButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="gitFLASHCOINButton" style="width:35%;"></a>
+								<a href="https://github.com/flash-coin" target="_blank"><img src="images/_newsite/web_img/img-GitFLASHCOINButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-GitFLASHCOINButton" style="width:35%;"></a>
 							</div>
 						</div>
 					</div>
