The FLASH Advantage - Texts changed

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 									<div class="topmargin-lg text-center">
 										<div class="inner-section first-child">
 											<h2>What is FLASH?</h2>
-											<h4>FLASH is a reinvention of Litecoin, built to scale for worldwide commerce and fast enough to handle everyday transactions. The flexible and easy to integrate core code allows exchanges and wallets to add FLASH to their platform within hours. With a settlement time of around 2 seconds and consensus within 2 minutes, anyone, anywhere can use the FLASH mobile wallet as easily as cash or credit card.</h4>
+											<h4>FLASH is a reinvention of Litecoin, built to scale for worldwide commerce and fast enough to handle everyday transactions. The flexible and easy to integrate core code allows exchanges and wallets to add FLASH to their platform within hours. With a settlement time of around 5 seconds and consensus within 2 minutes, anyone, anywhere can use the FLASH mobile wallet as easily as cash or credit card.</h4>
 										</div>
 									</div>
 								</div>
@@ -199,7 +199,7 @@
 											<i class="icon-line2-bulb i-alt"></i>
 										</div>
 										<h3>No Unfair Advantage</h3>
-										<p>No Unfair Advantage, everyone donated something for their FLASH, except for less than 0.1% of the FLASH that was given to people who tested FLASH. There is no developer slush fund, please don’t ask for free coins.</p>
+										<p>Everyone donated something for their FLASH, except for the tiny amount of FLASH that was given to people who originally tested the platform. There is no developer slush fund, just a strong community behind FLASH.</p>
 									</div>
 								</div>
 								<div class="col_one_third">
@@ -208,7 +208,7 @@
 											<i class="icon-bar-chart i-alt"></i>
 										</div>
 										<h3>Zero Inflation</h3>
-										<p>Zero Inflation. All coins were issued to the community. No new coins will ever be issued. If you want some FLASH you will need to trade with community members.</p>
+										<p>All coins were issued to the community. No new coins will ever be issued. If you want some FLASH you will need to trade with community members or purchase it on an exchange.</p>
 									</div>
 								</div>
 								<div class="col_one_third col_last">
@@ -217,7 +217,7 @@
 											<i class="icon-users2 i-alt"></i>
 										</div>
 										<h3>Public blockchain</h3>
-										<p>Public blockchain operated for the public good.</p>
+										<p>Public blockchain operated for the public good. FLASH is a not for profit organization that has cut out the middleman to enable fast and inexpensive transactions.</p>
 									</div>
 								</div>
 								<div class="clear"></div>
@@ -227,7 +227,7 @@
 											<i class="icon-users i-alt"></i>
 										</div>
 										<h3>Community supported</h3>
-										<p>Community supported. Anyone can develop using the FLASH blockchain. Build a project, collect your fee for using your app directly into your own wallet. Projects can be developed by anyone. Developers solicit donations from the community.</p>
+										<p>Anyone can develop on the FLASH blockchain. Build a project and decide how much you want to charge, while enabling direct payments to your FLASH wallet.</p>
 									</div>
 								</div>
 								<div class="col_one_third nobottommargin">
@@ -236,7 +236,7 @@
 											<i class="icon-leaf i-alt"></i>
 										</div>
 										<h3>Eco-Friendly</h3>
-										<p>Eco-Friendly. We’ve benchmarked 25k transactions per second using 80 watts of power.</p>
+										<p>FLASH doesn’t require energy intensive mining to create new coins because the entire supply is already in circulation.</p>
 									</div>
 								</div>
 								<div class="col_one_third nobottommargin col_last">
@@ -245,7 +245,7 @@
 											<i class="icon-line2-bar-chart i-alt"></i>
 										</div>
 										<h3>High volume</h3>
-										<p>Optimized and tested for efficiency and high volume.</p>
+										<p>FLASH focuses on high transaction volume because the ultimate goal is to support worldwide adoption.</p>
 									</div>
 								</div>
 							</div>
@@ -782,7 +782,7 @@
 					<!-- #section-resources end -->
 
 					<!-- Whitepaper ============================================= -->
-					<div id="whitepaper" class="section parallax page-section" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
+					<div id="whitepaper" class="section parallax page-section" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px 0px;">
 						<div class="container clearfix">
 							<div class="heading-block title-center nobottomborder">
 								<h2>Download Whitepaper</h2>
