Homepage Text changed

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 											<i class="icon-users2 i-alt"></i>
 										</div>
 										<h3>Public blockchain</h3>
-										<p>Public blockchain operated for the public good. FLASH is a not for profit organization that has cut out the middleman to enable fast and inexpensive transactions.</p>
+										<p>Public blockchain operated for the public good.  FLASH has cut out the middleman to enable fast and inexpensive transactions.</p>
 									</div>
 								</div>
 								<div class="clear"></div>
@@ -317,7 +317,7 @@
 							<div class="fancy-title title-border title-center">
 								<h1><span>Roadmap</span></h1>
 							</div>
-							<span>FLASH is being optimized to support applications in the $1 Trillion remittance market. We have exchanges in UAE, India, Mexico and Liechtenstein that have agreed to participate.</span>
+							<span>FLASH is optimized to support applications in the $1 Trillion remittance market.</span>
 						</div>
 						<div class="container clearfix">
 							<div class="row">
@@ -326,12 +326,11 @@
 								</div>
 								<div class="col-md-8">
 									<h2>Features</h2>
-									<span>The features are broken into several categories:</span>
 									<ul>
-										<li>FLASH web wallet (FWW), which will have support for credit card purchase and in-wallet exchange for BTC, BCH, and local currency. Many additional local languages will be added</li>
-										<li>Blockchain upgrades to make FLASH more stable</li>
-										<li>Remittance applications including Human ATM and automatic conversion to local fiat</li>
-										<li>FLASH Merchant services including consumer payment via FLASH with cash back feature</li>
+										<li>The FLASH Web Wallet (FWW) currently holds BTC, BCH, DASH, ETH, and OMG, with more coins coming soon.</li>
+										<li>The FWW will soon offer a built in exchange that will support fiat/cryptocurrency conversions.</li>
+										<li>The FWW will offer remittance applications including Human ATMs and automatic conversion to local fiat.</li>
+										<li>The FWW is available as a mobile app on Android and iOS so it can be accessed anywhere.</li>
 									</ul>
 									<span>Please Note: Roadmap will be updated on regular basis as we make progress.</span>
 								</div>
