Create FAQs page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css?ver=1.9" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?ver=2.3" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<!-- Document Title
 	============================================= -->
@@ -569,7 +569,7 @@
 									</div>
 									<p>FLASH supports any legal cryptocurrency exchange, including decentralized exchanges. Our community occasionally contributes funds to get FLASH listed. FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
-										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security)</p>
+										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security).</p>
 									<ul class="grid-3 clients-grid nobottommargin clearfix">
 										<li><a href="https://www.cryptopia.co.nz/Exchange/?market=FLASH_BTC" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash Cryptopia exchange"></a></li>
 										<li><a href="https://einstein.exchange/trade?mode=advanced&instrument=FLASHUSD" target="_blank"><img src="images/exchanges/einstein.jpg" alt="Flash Einstein exchange"></a></li>
