Added FAQs as a submenu of Resource menu

--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,7 @@
 		<link rel="stylesheet" href="css/dark.css" type="text/css" />
 		<link rel="stylesheet" href="css/animate.css" type="text/css" />
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
-		<link rel="stylesheet" href="css/04.custom.css?ver=2.3" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?ver=2.5" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<title>Flashcoin | FAQs</title>
 		<script src="js/jquery.js"></script>
@@ -252,8 +252,8 @@
 									<div class="faqs-desc-bg">
 										<h4 class="">
 											<p>Yes, FLASH currently has an Android wallet which can be found in the PlayStore and an iOS wallet which can be found in the Apple iTunes store.</p>
-											<p class=""><b>Android wallet:</b> <a target="_blank" href="https://play.google.com/store/apps/details?id=com.flash.wallet.android">https://play.google.com/store/apps/details?id=com.flash.wallet.android</a></p>
-											<p class=""><b>Apple iOS wallet:</b> <a target="_blank" href="https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514">https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514</a></p>
+											<p class=""><b>Android wallet:</b> <a class="download-link" target="_blank" href="https://play.google.com/store/apps/details?id=com.flash.wallet.android">https://play.google.com/store/apps/details?id=com.flash.wallet.android</a></p>
+											<p class=""><b>Apple iOS wallet:</b> <a class="download-link" target="_blank" href="https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514">https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514</a></p>
 										</h4>
 									</div>
 								</div>
@@ -264,11 +264,11 @@
 									<div class="faqs-desc-bg">
 										<h4 class="">
 											<p>FLASH is actively discussed by community members in Discord and Telegram, as well as the other relevant social media platforms.</p>
-											<p class=""><b>Discord:</b> <a target="_blank" href="https://discord.gg/2nFmMqA">https://discord.gg/2nFmMqA</a></p>
-											<p class=""><b>Telegram:</b> <a target="_blank" href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w">https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w</a></p>
-											<p class=""><b>Reddit:</b> <a target="_blank" href="https://www.reddit.com/r/FlashCoins/">https://www.reddit.com/r/FlashCoins/</a></p>
-											<p class=""><b>Bitcoin Talk:</b> <a target="_blank" href="https://bitcointalk.org/index.php?topic=1605453.0">https://bitcointalk.org/index.php?topic=1605453.0</a></p>
-											<p class=""><b>Twitter:</b> <a target="_blank" href="https://twitter.com/FlashCoins">https://twitter.com/FlashCoins</a></p>
+											<p class=""><b>Discord:</b> <a class="download-link" target="_blank" href="https://discord.gg/2nFmMqA">https://discord.gg/2nFmMqA</a></p>
+											<p class=""><b>Telegram:</b> <a class="download-link" target="_blank" href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w">https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w</a></p>
+											<p class=""><b>Reddit:</b> <a class="download-link" target="_blank" href="https://www.reddit.com/r/FlashCoins/">https://www.reddit.com/r/FlashCoins/</a></p>
+											<p class=""><b>Bitcoin Talk:</b> <a class="download-link" target="_blank" href="https://bitcointalk.org/index.php?topic=1605453.0">https://bitcointalk.org/index.php?topic=1605453.0</a></p>
+											<p class=""><b>Twitter:</b> <a class="download-link" target="_blank" href="https://twitter.com/FlashCoins">https://twitter.com/FlashCoins</a></p>
 										</h4>
 									</div>
 								</div>
