--- a/header.html
+++ b/header.html
@@ -129,6 +129,11 @@
 											</a>
 										</li>
 										<li>
+											<a href="faq.html">
+												<div>FAQs</div>
+											</a>
+										</li>
+										<li>
 											<a href="#" data-href="#kpi">
 												<div>KPI</div>
 											</a>
