Roadmap section new design

--- a/faq.html
+++ b/faq.html
@@ -99,7 +99,7 @@
 										<h3>How Many Transactions Per Second can be Performed On The FLASH Blockchain?</h3>
 									</div>
 									<div class="faqs-desc-bg">
-										<h4 class="" >The FLASH decentralized blockchain processes several thousand transacaons per second.</h4>
+										<h4 class="" >The FLASH decentralized blockchain processes several thousand transactions per second.</h4>
 									</div>
 								</div>
 								<div class="faqs-section">
