--- a/header.html
+++ b/header.html
@@ -65,8 +65,8 @@
 											</a>
 										</li>
 										<li>
-											<a href="#" data-href="#partners">
-												<div>PARTNERS</div>
+											<a href="flash-merchants.html">
+												<div>MERCHANTS</div>
 											</a>
 										</li>
 										<li>
