Fixed navbar clicking issue

--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3 bottommargin">
                   <div class="partners">
-                    <a href="" target="_blank">
+                    <a href="javascript:void(0)">
                       <div class="team-image">
                         <img src="images/merchants/essential-oils.png" alt="#1 Essential Oil">
                       </div>
@@ -236,7 +236,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3 bottommargin">
                   <div class="partners">
-                    <a href="" target="_blank">
+                    <a href="javascript:void(0)">
                       <div class="team-image">
                         <img src="images/merchants/hire-crypto.png" alt="HireCrypto">
                       </div>
@@ -250,7 +250,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3 bottommargin">
                   <div class="partners">
-                    <a href="" target="_blank">
+                    <a href="javascript:void(0)">
                       <div class="team-image">
                         <img src="images/merchants/ewazan.png" alt="Ewazan.com">
                       </div>
@@ -334,7 +334,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3 bottommargin">
                   <div class="partners">
-                    <a href="" target="_blank">
+                    <a href="javascript:void(0)">
                       <div class="team-image">
                         <img src="images/merchants/social-mimi.png" alt="Social MIMI">
                       </div>
