Added Merchant section on Homepage

--- a/header.html
+++ b/header.html
@@ -65,7 +65,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="flash-merchants.html">
+											<a href="#" data-href="#merchants">
 												<div>MERCHANTS</div>
 											</a>
 										</li>
