--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css?ver=2.3" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?ver=2.5" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<!-- Document Title
 	============================================= -->
@@ -601,6 +601,76 @@
 					<!-- #section-about-exchanges end -->
 					<div class="clear"></div>
 					<div class="line"></div>
+
+					<!-- partners ============================================= -->
+					<div id="merchants" class="page-section topmargin-lg">
+						<div class="heading-block center">
+							<div class="fancy-title title-border title-center">
+								<h1><span>Featured Merchants Who Accept FLASH</span></h1>
+							</div>
+							<span>Merchants proudly accept FLASH as a method of payment for their services.</span>
+						</div>
+						<div class="container clearfix">
+							<div class="row">
+								<ul class="clients-grid grid-4 nobottommargin clearfix partners-width">
+									<li><div class="team partners">
+										<a href="https://www.mojave.cafe" target="_blank">
+											<div class="team-image">
+												<img src="images/merchants/mojave-cafe.png" alt="Mojave Café">
+											</div>
+											<div class="team-desc">
+												<div class="partners-title">
+													<span>Mojave Café</span>
+												</div>
+											</div>
+										</a>
+									</div></li>
+									<li><div class="team partners">
+										<a href="https://www.101vape.com" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/101vape.png" alt="101vape.com">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>101vape.com</span>
+                        </div>
+                      </div>
+                    </a>
+									</div></li>
+									<li><div class="team partners">
+										<a href="http://www.retrotowers.co.uk/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/retro-towers.png" alt="Retro Towers">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Retro Towers</span>
+                        </div>
+                      </div>
+                    </a>
+									</div></li>
+									<li><div class="team partners">
+										<a href="http://143vpn.com" target="_blank">
+                      <div class="team-image">
+                          <img src="images/merchants/143VPN.png" alt="143VPN">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>143VPN</span>
+                        </div>
+                      </div>
+                    </a>
+									</div></li>
+								</ul>
+								<div class="col-md-12">
+									<div class="promo promo-center">
+										<a href="flash-merchants.html"><img src="images/_newsite/web_img/img-MoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-MoreButton" style="width:11%;"></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- #section-partners end -->
 
 					<!-- Upcoming Features ============================================= -->
 					<div id="feature-flash" class="page-section topmargin-lg">
