Updated Roadmap section design

--- a/faq.html
+++ b/faq.html
@@ -83,7 +83,7 @@
 										<h3>Why Was FLASH Created, What Problems does it Solve?</h3>
 									</div>
 									<div class="faqs-desc-bg">
-										<h4 class="" >FLASH was designed to be a decentralized, real world remittance platform, solving problems which BitCoin and Litecoin failed to address with respects to transaction volume, transaction speed, and transaction fees. It also solves the problems other coins have in regards to high electricity consumption and the mining 'arms race'.</h4>
+										<h4 class="" >FLASH is designed to be a decentralized, real world remittance platform, solving problems which BitCoin and Litecoin failed to address with respects to transaction volume, transaction speed, and transaction fees. It also solves the problems other coins have in regards to high electricity consumption and the mining 'arms race'.</h4>
 									</div>
 								</div>
 								<div class="faqs-section">
