--- a/header.html
+++ b/header.html
@@ -129,7 +129,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="faq.html">
+											<a href="#" data-href="#faqs">
 												<div>FAQs</div>
 											</a>
 										</li>
