Update marchant section on homepage

--- a/index.html
+++ b/index.html
@@ -528,49 +528,49 @@
 							<div class="row">
 								<ul class="clients-grid grid-4 nobottommargin clearfix partners-width">
 									<li><div class="team partners">
-										<a href="https://www.mojave.cafe" target="_blank">
-											<div class="team-image">
-												<img src="images/merchants/mojave-cafe.png" alt="Mojave Café">
-											</div>
-											<div class="team-desc">
-												<div class="partners-title">
-													<span>Mojave Café</span>
-												</div>
-											</div>
-										</a>
-									</div></li>
-									<li><div class="team partners">
-										<a href="https://www.101vape.com" target="_blank">
+										<a href="http://www.ubbbk.com/" target="_blank">
                       <div class="team-image">
-                        <img src="images/merchants/101vape.png" alt="101vape.com">
+                        <img src="images/merchants/ubbbk.png" alt="UBBBK">
                       </div>
                       <div class="team-desc">
                         <div class="partners-title">
-                          <span>101vape.com</span>
+                          <span>UBBBK</span>
                         </div>
                       </div>
                     </a>
 									</div></li>
 									<li><div class="team partners">
-										<a href="http://www.retrotowers.co.uk/" target="_blank">
+										<a href="http://ernestorassi.com/" target="_blank">
                       <div class="team-image">
-                        <img src="images/merchants/retro-towers.png" alt="Retro Towers">
+                        <img src="images/merchants/Ernesto-Rassi.jpg" alt="Ernesto Rassi">
                       </div>
                       <div class="team-desc">
                         <div class="partners-title">
-                          <span>Retro Towers</span>
+                          <span>Ernesto Rassi</span>
                         </div>
                       </div>
                     </a>
 									</div></li>
 									<li><div class="team partners">
-										<a href="http://143vpn.com" target="_blank">
+										<a href="http://bitstickers.net" target="_blank">
                       <div class="team-image">
-                          <img src="images/merchants/143VPN.png" alt="143VPN">
+                          <img src="images/merchants/bit-stickers.png" alt="BitStickers - Spread the word">
                       </div>
                       <div class="team-desc">
                         <div class="partners-title">
-                          <span>143VPN</span>
+                          <span><b>BitStickers</b> - Spread the word</span>
+                        </div>
+                      </div>
+                    </a>
+									</div></li>
+									<li><div class="team partners">
+										<a href="https://eve-buy.com/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/EveBuy.png" alt="Eve-Buy">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Eve-Buy</span>
                         </div>
                       </div>
                     </a>
