SEO image-content updated Roadmap section new image updated

--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -19,19 +19,19 @@
     <![endif]-->
     <!-- Social Tags ============================================= -->
     <meta name="description" content="FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and because it is based on LTC, integration." />
-    <link rel="canonical" href="https://www.flashcoin.io/our-partners.html" />
+    <link rel="canonical" href="https://www.flashcoin.io/flash-merchants.html" />
     <meta itemprop="name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH.">
     <meta itemprop="description" content="CONNECTING THE WORLD IN A FLASH. FLASHCOIN Partners">
-    <meta itemprop="image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg">
+    <meta itemprop="image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1">
     <meta property="og:site_name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
-    <meta property="og:url" content="https://www.flashcoin.io/index.html" />
+    <meta property="og:url" content="https://www.flashcoin.io/flash-merchants.html" />
     <meta property="og:description" content="CONNECTING THE WORLD IN A FLASH. FLASHCOIN Partners" />
-    <meta property="og:image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+    <meta property="og:image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
     <meta name="twitter:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
     <meta name="twitter:description" content="CONNECTING THE WORLD IN A FLASH. FLASHCOIN Partners" />
-    <meta name="twitter:image:src" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+    <meta name="twitter:image:src" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 
     <!-- Document Title ============================================= -->
     <title>Flashcoin | Featured Merchants</title>
