--- a/paper-wallet-cold-storage-guide.html
+++ b/paper-wallet-cold-storage-guide.html
@@ -6,19 +6,19 @@
 		<link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and because it is based on LTC, integration." />
-		<link rel="canonical" href="https://www.flashcoin.io/guides3.html" />
+		<link rel="canonical" href="https://www.flashcoin.io/paper-wallet-cold-storage-guide.html" />
 		<meta itemprop="name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH.">
 		<meta itemprop="description" content="FLASH QT Desktop wallet - How to use FLASH QT Wallet">
-		<meta itemprop="image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg">
+		<meta itemprop="image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1">
 		<meta property="og:site_name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
-		<meta property="og:url" content="https://www.flashcoin.io/index.html" />
+		<meta property="og:url" content="https://www.flashcoin.io/paper-wallet-cold-storage-guide.html" />
 		<meta property="og:description" content="FLASH QT Desktop wallet - How to use FLASH QT Wallet" />
-		<meta property="og:image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+		<meta property="og:image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 		<meta name="twitter:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 		<meta name="twitter:description" content="FLASH QT Desktop wallet - How to use FLASH QT Wallet" />
-		<meta name="twitter:image:src" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+		<meta name="twitter:image:src" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600|Open+Sans|Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
 		<link rel="stylesheet" href="css/04.style.css" type="text/css" />
