--- a/tutorials.html
+++ b/tutorials.html
@@ -28,16 +28,16 @@
 	<link rel="canonical" href="https://www.flashcoin.io/tutorials.html" />
 	<meta itemprop="name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH.">
 	<meta itemprop="description" content="FLASH Web Wallet - FLASH Guides.">
-	<meta itemprop="image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg">
+	<meta itemprop="image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1">
 	<meta property="og:site_name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 	<meta property="og:url" content="https://www.flashcoin.io/index.html" />
 	<meta property="og:description" content="FLASH Web Wallet - FLASH Guides" />
-	<meta property="og:image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+	<meta property="og:image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 	<meta name="twitter:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 	<meta name="twitter:description" content="FLASH Web Wallet - FLASH Guides" />
-	<meta name="twitter:image:src" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+	<meta name="twitter:image:src" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 
 	<!-- Document Title
 	============================================= -->
