--- a/upcoming-features.html
+++ b/upcoming-features.html
@@ -9,16 +9,16 @@
 	<link rel="canonical" href="https://www.flashcoin.io/upcoming-features.html" />
 	<meta itemprop="name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH.">
 	<meta itemprop="description" content="FLASH upcomoing features - Remittances, Merchant Services, Integrated Exchange, Human Teller Machine (HTM).">
-	<meta itemprop="image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg">
+	<meta itemprop="image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1">
 	<meta property="og:site_name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 	<meta property="og:url" content="https://www.flashcoin.io/upcoming-features.html" />
 	<meta property="og:description" content="FLASH upcomoing features - Remittances, Merchant Services, Integrated Exchange, Human Teller Machine (HTM)." />
-	<meta property="og:image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+	<meta property="og:image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 	<meta name="twitter:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 	<meta name="twitter:description" content="FLASH upcomoing features - Remittances, Merchant Services, Integrated Exchange, Human Teller Machine (HTM)." />
-	<meta name="twitter:image:src" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+	<meta name="twitter:image:src" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600|Open+Sans|Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
 	<link rel="stylesheet" href="css/04.style.css" type="text/css" />
