--- a/web-wallet-guide.html
+++ b/web-wallet-guide.html
@@ -24,19 +24,19 @@
 	<!-- Social Tags
 	============================================= -->
 	<meta name="description" content="FLASH Web Wallet - How to use FLASH Web Wallet." />
-	<link rel="canonical" href="https://www.flashcoin.io/guides.html" />
+	<link rel="canonical" href="https://www.flashcoin.io/web-wallet-guide.html" />
 	<meta itemprop="name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH.">
 	<meta itemprop="description" content="FLASH Web Wallet - How to use FLASH Web Wallet.">
-	<meta itemprop="image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg">
+	<meta itemprop="image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1">
 	<meta property="og:site_name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
-	<meta property="og:url" content="https://www.flashcoin.io/index.html" />
+	<meta property="og:url" content="https://www.flashcoin.io/web-wallet-guide.html" />
 	<meta property="og:description" content="FLASH Web Wallet - How to use FLASH Web Wallet." />
-	<meta property="og:image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+	<meta property="og:image" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 	<meta name="twitter:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 	<meta name="twitter:description" content="FLASH Web Wallet - How to use FLASH Web Wallet." />
-	<meta name="twitter:image:src" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+	<meta name="twitter:image:src" content="https://www.flashcoin.io/images/_newsite/web_img/WebsiteActualLogo.png?ver=1.1" />
 
 	<!-- Document Title
 	============================================= -->
