Updated Roadmap - Achievement section progress bar UI

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<link rel="stylesheet" href="css/swiper.min.css" integrity="text/css">
 		<link rel="stylesheet" href="css/roadmap_css.css" type="text/css" />
-		<link rel="stylesheet" href="css/achievement_style.css" type="text/css" />
+		<link rel="stylesheet" href="css/achievement_style.css?ver=1.7" type="text/css" />
 		<!-- Document Title
 	============================================= -->
 		<title>Flashcoin | Home</title>
@@ -399,69 +399,91 @@
 						</div>
 				  </div>
 
-										<!-- #section-team end -->
-										<div id="achievements" class="page-section topmargin-lg">
-											<div class="heading-block center">
-												<div class="fancy-title title-border title-center">
-													<h1><span>Achievements</span></h1>
-												</div>
-											</div>
-											<div class="container clearfix">
-												<div class="row ">
-													<div class="col-md-6 bottommargin-sm">
-														<div class="inner-section">
-															<h2>Quarter 1 2018</h2>
-															<div class="sub-section">
-																<h3 class="color-gold">FLASH Web Wallet</h3>
-																<h5 class="row"><div class="col-md-6"><span>New features addition and stability improvement</span></div><div class="col-md-6"><span class="fill-in" data-width="100">100% Complete</span></div></h5>
-																<h5 class="row"><div class="col-md-6"><span>Multi cryptocurrency support BTC</span></div><div class="col-md-6"><span class="fill-in" data-width="100">100% Complete</span></div></h5>
-															</div>
-															<div class="sub-section">
-																<h3 class="color-gold">FLASH Blockchain & Apps</h3>
-																<h5 class="row"><div class="col-md-6"><span>Launch of FLASH Android wallet</span></div><div class="col-md-6"><span class="fill-in" data-width="100">100% Complete</span></div></h5>
-																<h5 class="row clearfix collapse" id="Quarter1">
-																	<div class="col-md-6"><span>Launch of Merchant Services</span></div><div class="col-md-6"><span class="fill-in" data-width="100">100% Complete</span></div>
-																</h5>
-																<h5 class="text-right" style="margin:0"><a href="javascript:void(0)" onclick="javascript:expandAchievementSection(this)" class="color-gold" data-toggle="collapse" data-target="#Quarter1">More+</a></h5>
-															</div>
-														</div>
-													</div>
-													<div class="col-md-6 bottommargin-sm">
-														<div class="inner-section">
-															<h2>Quarter 2 2018</h2>
-															<div class="sub-section">
-																<h3 class="color-gold">FLASH Web Wallet</h3>
-																<h5 class="row"><div class="col-md-6"><span>Multi cryptocurrencies support ETH, DASH, LTC</span></div><div class="col-md-6"><span class="fill-in" data-width="100">100% Completed</span></div></h5>
-															</div>
-															<div class="sub-section">
-																<h3 class="color-gold">FLASH Blockchain & Apps</h3>
-																<h5 class="row"><div class="col-md-6"><span>Release of FLASH iOS wallet</span></div><div class="col-md-6"><span class="fill-in" data-width="100">100% Completed</span></div></h5>
-															</div>
-														</div>
-													</div>
-												</div>
-												<div class="row ">
-													<div class="col-md-6 bottommargin-sm">
-														<div class="inner-section">
-															<h2>Quarter 3 2018</h2>
-															<div class="sub-section">
-																<h3 class="color-gold">FLASH Web Wallet</h3>
-																<h5 class="row"><div class="col-md-6"><span>Import and Export of Private keys</span></div><div class="col-md-6"><span class="fill-in" data-width="70">70% Complete</span></div></h5>
-															</div>
-															<div class="sub-section">
-																<h3 class="color-gold">FLASH Blockchain & Apps</h3>
-																<h5 class="row"><div class="col-md-6"><span>Testnet launch of Decentralized FLASH</span></div><div class="col-md-6"><span class="fill-in" data-width="55">55% Complete</span></div></h5>
-															</div>
-														</div>
-													</div>
-													<div class="col-md-6 bottommargin-sm">
-														<div class="inner-section">
-															<h2>Quarter 4 2018</h2>
-														</div>
-													</div>
-												</div>
-											</div>
+					<!-- #section-team end -->
+					<div id="achievements" class="page-section topmargin-lg">
+						<div class="heading-block center">
+							<div class="fancy-title title-border title-center">
+								<h1><span>Achievements</span></h1>
+							</div>
+						</div>
+						<div class="container clearfix">
+							<div class="row ">
+								<div class="col-md-6 bottommargin-sm">
+									<div class="inner-section">
+										<h2>Quarter 1 2018</h2>
+										<div class="sub-section">
+											<h3 class="color-gold">FLASH Web Wallet</h3>
+											<h5 class="row">
+												<div class="col-md-6"><span>New features addition and stability improvement</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
+											<h5 class="row">
+												<div class="col-md-6"><span>Multi cryptocurrency support BTC</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
 										</div>
+										<div class="sub-section">
+											<h3 class="color-gold">FLASH Blockchain & Apps</h3>
+											<h5 class="row">
+												<div class="col-md-6"><span>Launch of FLASH Android wallet</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
+											<h5 class="row clearfix collapse" id="Quarter1">
+												<div class="col-md-6"><span>Launch of Merchant Services</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
+											<h5 class="text-right" style="margin:0"><a href="javascript:void(0)" onclick="javascript:expandAchievementSection(this)" class="color-gold" data-toggle="collapse" data-target="#Quarter1">More+</a></h5>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 bottommargin-sm">
+									<div class="inner-section">
+										<h2>Quarter 2 2018</h2>
+										<div class="sub-section">
+											<h3 class="color-gold">FLASH Web Wallet</h3>
+											<h5 class="row">
+												<div class="col-md-6"><span>Multi cryptocurrencies support ETH, DASH, LTC</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
+										</div>
+										<div class="sub-section">
+											<h3 class="color-gold">FLASH Blockchain & Apps</h3>
+											<h5 class="row">
+												<div class="col-md-6"><span>Release of FLASH iOS wallet</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row ">
+								<div class="col-md-6 bottommargin-sm">
+									<div class="inner-section">
+										<h2>Quarter 3 2018</h2>
+										<div class="sub-section">
+											<h3 class="color-gold">FLASH Web Wallet</h3>
+											<h5 class="row">
+												<div class="col-md-6"><span>Import and Export of Private keys</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">70% Completed</span><span class="fill-in" data-width="70"></span></div>
+											</h5>
+										</div>
+										<div class="sub-section">
+											<h3 class="color-gold">FLASH Blockchain & Apps</h3>
+											<h5 class="row">
+												<div class="col-md-6"><span>Testnet launch of Decentralized FLASH</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">55% Completed</span><span class="fill-in" data-width="55"></span></div>
+											</h5>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 bottommargin-sm">
+									<div class="inner-section">
+										<h2>Quarter 4 2018</h2>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
 					<!-- News ============================================= -->
 					<div id="news" class="page-section topmargin-lg">
